@@ -7,6 +7,7 @@ mkinstalldirs
 missing
 config.log
 *.cache
-config.status
+config.*
 depcomp
 libtool
+INSTALL
